Change domain name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "landing-page",
-  "homepage": "http://VantageSG.github.io/landing-page",
+  "homepage": "https://vantage-sg.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
